--- a/ste10keys.html
+++ b/ste10keys.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0.1;url=http://bit.ly/3ZRO7iV">
+<meta http-equiv="refresh" content="0.1;url=http://bit.ly/3woQJHl">
